# university-subreddits

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build_images.yml  on_pull_request.yml  on_push.yml  terraform.yml  test.yml
dockerfiles/: Dockerfile.extract  Dockerfile.load  Dockerfile.transform  cloudbuild.yml
src/: extract.py  load.py  transform.py
src/common/: __init__.py  bigquery_client.py  config.py  middleware.py  models.py  nlp_client.py  reddit_client.py  storage_client.py  utils.py
terraform/: backend.tf  bigquery.tf  cloud-run.tf  cloud-storage.tf  eventarc.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  scheduler.tf  variables.tf  workflows.tf
tests/: __init__.py  conftest.py  fakes.py
tests/integration/: test_extract.py  test_load.py  test_transform.py
tests/unit/: test_extract.py  test_load.py  test_reddit_client.py  test_transform.py  test_utils.py
