[project]
name = "university-subreddits"
description = "University Subreddits"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = [
    "fastapi~=0.100.1",
    "uvicorn~=0.23.1",
    "google-cloud-storage~=2.10.0",
    "pydantic~=2.0.2",
]

[project.optional-dependencies]
extract = [
    "praw~=7.7.0",
]

transform = [
    "requests~=2.31.0",
    "pandas~=2.0.3",
    "google-cloud-language~=2.10.1",
]

load = [
    "google-cloud-bigquery~=3.11.3",
]

test = [
    "mypy~=1.4.1",
    "pre-commit~=3.3.3",
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "university-subreddits[extract]",
    "university-subreddits[transform]",
    "university-subreddits[load]",
]

[tool.black]
line-length = 120
target_version = ['py311']
include = '\.pyi?$'
